--- a/index.html
+++ b/index.html
@@ -190,6 +190,45 @@
           </div>
         </div>
       </section>
+      
+      <!-- PROFILE -->
+      <section class="tab-content profile" data-tab="profile" style="display: none;">
+        <div class="hero">
+          <h2>👤 My Profile</h2>
+          <p class="subtitle">Account overview & referral bonuses</p>
+        </div>
+        <div class="card-grid">
+          <div class="card dark">
+            <h3>Wallet</h3>
+            <p id="walletAddress">Not Connected</p>
+            <p>Total XP: <strong id="totalXP">180</strong></p>
+          </div>
+          <div class="card dark">
+            <h3>WarpAi Token</h3>
+            <p id="waiBalance">Balance: 342.50 WAI</p>
+            <p>Level Bonus: 10%</p>
+          </div>
+          <div class="card dark">
+            <h3>Claim Token</h3>
+            <p>Reward: 5 WAI</p>
+            <button id="claimTokenBtn">Claim</button>
+          </div>
+          <div class="card dark">
+            <h3>Share Link</h3>
+            <p>Earn 5 WAI per share</p>
+            <button id="shareFarcasterBtn">Share on Farcaster</button>
+            <button id="shareXBtn">Share on X</button>
+          </div>
+          <div class="card full premium">
+            <h3>📦 Claim History</h3>
+            <ul id="claimHistory">
+              <li>+5 WAI – shared on X</li>
+              <li>+5 WAI – referred friend</li>
+              <li>+10 WAI – weekly login</li>
+            </ul>
+          </div>
+        </div>
+      </section>
 
       <!-- MODALS -->
       <div id="faqModal" class="modal hidden">
