--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <p class="subtitle">Track your own wallet activity</p>
         </div>
         <div class="card-grid">
-          <div class="card green">
+          <div class="card dark">
             <h3>Latest Activity</h3>
             <p id="latestActivity">Ex Bought Token on Zora</p>
             <small id="activityResult">+ $5.23 Win</small>
