--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
       <button class="tab-button" data-tab="track">📈 Track</button>
       <button class="tab-button" data-tab="rewards">🎁 Rewards</button>
       <button class="tab-button" data-tab="premium">💎 Premium</button>
+      <button class="tab-button" data-tab="profile">👤 Profile</button>
+
     </nav>
 
     <main>
