--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <li>Base</li>
             </ul>
           </div>
-          <div class="card dark full">
+          <div class="card dark">
             <h3>🎨 NFT Mint History</h3>
             <ul id="nftHistory" style="text-align: left; padding-left: 1rem; font-size: 0.75rem; line-height: 1.5;">
               <li><strong>BaseBuddies #024</strong> – 0.02 ETH – Zora</li>
