--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
       <!-- TRACK -->
       <section class="tab-content track" data-tab="track" style="display: none;">
         <div class="hero">
-          <h2>📈 Onchain Tracker</h2>
-          <p class="subtitle">Track your own wallet activity</p>
+          <h2>📈 Onchain Activity</h2>
         </div>
         <div class="card-grid">
           <div class="card dark">
@@ -128,8 +127,7 @@
       <!-- REWARDS -->
       <section class="tab-content rewards" data-tab="rewards" style="display: none;">
         <div class="hero">
-          <h2>🚀 Rewards & XP</h2>
-          <p class="subtitle">Boost your journey and earn daily perks</p>
+          <h2>🚀 Rewards, Streaks & XP</h2>
         </div>
         <div class="card-grid">
           <div class="card dark full earn">
@@ -152,7 +150,6 @@
       <section class="tab-content premium" data-tab="premium" style="display: none;">
         <div class="hero">
           <h2>💎 Premium Tools</h2>
-          <p class="subtitle">Upgrade to premium to unlock full features</p>
         </div>
         <div class="card-grid">
           <div class="card dark">
