--- a/index.html
+++ b/index.html
@@ -64,13 +64,9 @@
             <button class="info-btn green" onclick="toggleXpInfo()">About XP & WAI</button>
           </div>
                     <div class="card full journey">
-            <h3>🎯 Your XP Journey</h3>
-            <p>Level <span id="level">1</span> → Next Level: <span id="nextLevelXP">200</span> XP</p>
-            <div class="xp-bar">
-              <div class="xp-fill" id="xpFill" style="width: 0%;"></div>
-            </div>
-            <small><span id="currentXPProgress">0</span> / <span id="nextLevelXP">200</span> XP</small>
-            <p id="badge" style="display: none;">🏆 Streak Master</p>
+            <h3>🎁 Claim Daily Bonus</h3>
+<p>Earn XP & grow your streak</p>
+<button>Claim Now</button>
           </div>
         </div>
         <div class="card dark">
