--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <div class="card-grid">
           <div class="card dark">
             <h3>Latest Activity</h3>
-            <p id="latestActivity">Ex Bought Token on Zora</p>
-            <small id="activityResult">+ $5.23 Win</small>
+            <p id="latestActivity">Loading...</p>
+<small id="activityResult">$0</small>
           </div>
           <div class="card dark">
             <h3>Tokens Minted</h3>
