--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       </div>
       <div class="wallet-ui">
         <span id="xpDisplay">0 XP 🔥</span>
-        <button id="connectWallet">Connect Wallet</button>
+<div id="walletUI">
+  <span id="walletAddress" style="opacity: 0.6;">Not Connected</span>
+  <button id="connectWallet">Connect Wallet</button>
+</div>
         <div class="settings-wrapper">
           <button id="settingsBtn" class="settings-icon">⚙️</button>
           <div id="settingsMenu" class="settings-dropdown">
