--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     <!-- RUTA 4 -->
     <div class="card dark full">
       <h3>ℹ️ About WarpAi & WAI</h3>
-      <p>
-        WarpAi tracks your onchain activity.  
+      <p> <strong>
+       WarpAi tracks your onchain activity.  
         Earn XP for every interaction.  
         Claim WAI tokens daily.  
         Unlock premium perks and level up.
