--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         <img src="logo.png" alt="WarpAi Logo" class="logo-icon-fixed" />
       </div>
       <div class="wallet-ui">
-        <span id="xpDisplay">0 XP 🔥</span>
-<div id="walletUI">
-  <span id="walletAddress" style="opacity: 0.6;">Not Connected</span>
-  <button id="connectWallet">Connect Wallet</button>
+        <div class="wallet-status">
+  <span id="xpDisplay">180 XP 🔥</span>
+  <div id="walletUI">
+    <span id="walletAddress" style="opacity: 0.6;">0xabc...123</span>
+    <button id="connectWallet">Disconnect</button>
+  </div>
 </div>
         <div class="settings-wrapper">
           <button id="settingsBtn" class="settings-icon">⚙️</button>
