--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="etherscan-key" content="Y1VRJKQB1A4K2JTA8GE1YDH3W54W4I35D5">
 </head>
 <body>
-  <div id="onboardingOverlay">
+  <div id="onboardingOverlay" class="fade-in-logo">
     <div class="onboarding-content">
       <img src="logo.png" alt="WarpAi Logo" />
     </div>
