--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
             <h3>🎯 Your Activity</h3>
             <p>XP: <span id="currentXP">🔥 0 XP</span><br>Streak: 5 days<br>Claimed: ✅</p>
             <button id="claimXpBtn">Claim XP</button>
-          </div>
+          </div> 
+           <div class="card dark">
+      <h3>💰 Claim WAI</h3>
+      <p>Daily reward: 5 WAI</p>
+      <button id="claimTokenBtn">Claim</button>
+    </div>
+          
           <div class="card dark">
             <h3>🏆 Level & Bonus</h3>
             <p>Level 1 → 200 XP</p>
