--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
         </div>
       </div>
     </header>
-
+<div class="xp-progress-banner">
+  <span>Level 1 → 200 XP</span>
+  <div class="xp-bar">
+    <div class="xp-fill" style="width: 0%;" id="xpBannerFill"></div>
+  </div>
+</div>
     <nav class="nav-tabs">
       <button class="tab-button active" data-tab="home">🏠 Home</button>
       <button class="tab-button" data-tab="track">📈 Track</button>
