--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
       <h3>💰 Claim WAI</h3>
       <p>Daily reward: 5 WAI</p>
       <button id="claimTokenBtn">Claim</button>
-    </div>
+    </div><div class="card dark">
+  <h3>🔗 Referral & Earn</h3>
+  <p>Earn WAI for every invite</p>
+  <button id="copyReferralBtn">Copy Link</button>
+</div>
           
           <div class="card dark">
             <h3>🏆 Level & Bonus</h3>
@@ -80,11 +84,6 @@
               <div class="xp-fill" style="width: 0%;"></div>
             </div>
             <small>Bonus: +10%</small>
-          </div>
-          <div class="card dark">
-            <h3>🔗 Referral & Earn</h3>
-            <p>Earn WAI for every invite</p>
-            <button id="copyReferralBtn">Copy Link</button>
           </div>
           <div class="card dark full">
             <h3>ℹ️ About WarpAi & WAI</h3>
