--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </header>
 <div class="xp-progress-banner">
-  <span>Level 1 → 200 XP</span>
+  <span>Level 1 → 200 XP | Bonus: +10%</span>
   <div class="xp-bar">
     <div class="xp-fill" style="width: 0%;" id="xpBannerFill"></div>
   </div>
