--- a/index.html
+++ b/index.html
@@ -120,25 +120,44 @@
       </section>
 
       <!-- REWARDS -->
-      <section class="tab-content rewards" data-tab="rewards" style="display: none;">
-        <div class="hero">
-          <h2>🚀 Rewards, Streaks & XP</h2>
-        </div>
-        <div class="card-grid">
-          <div class="card dark full earn">
-            <h3>🚀 Earn More WAI</h3>
-            <p>Share the app and invite friends to earn WarpAi Tokens.</p>
-            <button id="copyReferralBtn">Copy Referral Link</button>
-            <button id="shareOnXBtn">Share on X</button>
-            <button id="shareOnFarcasterBtn">Share on Farcaster</button>
-          </div>
-          <div class="card dark">
-            <h3>🏆 Referral Stats</h3>
-            <p>Friends invited: 3</p>
-            <p>Total earned: 15 WAI</p>
-          </div>
-        </div>
-      </section>
+<section class="tab-content rewards" data-tab="rewards" style="display: none;">
+  <div class="hero">
+    <h2>🚀 Rewards, Streaks & XP</h2>
+  </div>
+
+  <div class="custom-home-grid">
+    <div class="card dark">
+      <h3>📣 Earn More WAI</h3>
+      <p>Share WarpAi to earn tokens!</p>
+      <button id="copyReferralBtn">Copy Referral Link</button>
+      <button id="shareOnXBtn">Share on X</button>
+      <button id="shareOnFarcasterBtn">Share on Farcaster</button>
+    </div>
+
+    <div class="card dark">
+      <h3>🏆 Referral Stats</h3>
+      <p>Friends invited: <strong>3</strong></p>
+      <p>Total earned: <strong>15 WAI</strong></p>
+    </div>
+
+    <div class="card dark">
+      <h3>✅ Daily Claim</h3>
+      <p>You’ve claimed today’s reward</p>
+      <p><strong>+5 WAI</strong></p>
+    </div>
+
+    <div class="card dark full">
+      <h3>✨ Upcoming Rewards</h3>
+      <ul style="text-align: left; font-size: 0.75rem; padding-left: 1rem;">
+        <li>✅ Daily Login Bonus</li>
+        <li>🚀 Invite 3 Friends → +10 WAI</li>
+        <li>🔥 7-Day Claim Streak → XP Boost</li>
+        <li>📢 Share on X → +5 WAI</li>
+        <li>🌐 Share on Farcaster → +5 WAI</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
       <!-- PREMIUM -->
       <section class="tab-content premium" data-tab="premium" style="display: none;">
